# SmartScheduler

./: CMakeLists.txt  PRD.md  README.md
backend/: CMakeLists.txt  README.md  algo.cpp  algo.h  db.cpp  db.h  main.cpp  models.h
database/: schema.sql
frontend/: index.html
